--- a/config.env
+++ b/config.env
@@ -6,7 +6,7 @@ TELEGRAM_HASH = "bbbfa43f067e1e8e2fb41f334d32a6a7"                          # Re
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
 DATABASE_URL = ""                           # Require restart after changing it while bot running
-DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
+DOWNLOAD_DIR = "/data"    # Require restart after changing it while bot running
 CMD_SUFFIX = ""                             # Require restart after changing it while bot running
 AUTHORIZED_CHATS = "-1001438313485"                       # Require restart after changing it while bot running
 SUDO_USERS = "2119088004"                             # Require restart after changing it while bot running
