--- a/config.env
+++ b/config.env
@@ -22,7 +22,7 @@ USE_SERVICE_ACCOUNTS = "False"
 # GDrive Tools
 GDRIVE_ID = "14kWVa9dUOJr7yraefAkTs5nfzV3vpGbj"
 IS_TEAM_DRIVE = "True"
-STOP_DUPLICATE = "Truw"
+STOP_DUPLICATE = "True"
 INDEX_URL = "https://sxtcp.tg-index.workers.dev/0:"
 # Rclone
 RCLONE_PATH = ""
